--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hotelBooking</name>
 	<description>Demo project for Spring Boot</description>
+
 	<properties>
 		<java.version>17</java.version>
 		<mapstruct.version>1.5.4.Final</mapstruct.version>
+		<javafaker.version>1.0.2</javafaker.version>
 	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -59,6 +62,13 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>${javafaker.version}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
