--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<java.version>17</java.version>
 		<mapstruct.version>1.5.4.Final</mapstruct.version>
 		<javafaker.version>1.0.2</javafaker.version>
+		<validation.version>3.0.2</validation.version>
+		<validator.version>8.0.0.Final</validator.version>
 		<jjwt.version>0.11.5</jjwt.version>
 	</properties>
 
@@ -73,6 +75,19 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>${validation.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${validator.version}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
