--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<javafaker.version>1.0.2</javafaker.version>
 		<validation.version>3.0.2</validation.version>
 		<validator.version>8.0.0.Final</validator.version>
+		<springdoc.version>2.1.0</springdoc.version>
 		<jjwt.version>0.11.5</jjwt.version>
 	</properties>
 
@@ -88,7 +89,6 @@
 			<version>${validator.version}</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -107,6 +107,12 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
